# opensearch_sbert_POC

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: docker.md
embed/: embedder.py
files/text/: sample_memory_one.txt
opensearch/: .env.example  another_opensearch.py  docker-compose.yaml  main.py  opensearch.py
opensearch/docs/: run.md  run_with_opensearch_dashboard.md
sbert/: RTS_chunking.py  chunking_class.py  chunking_class_working.py  chunking_hybrid.py  chunks.py  section_chunker.py
sbert/docs/: chunks_readme.md
sbert/iterations/: chunk_blog.py  chunk_gem.py
src/: main.py
src/categorizer/: categorize.py  prompt.py
src/embed/: embedder.py
src/opensearch/: env.example  index.py  opensearch.py
src/opensearch/docs/md/: how_it_works.md  run.md  search_params.md
src/sbert/docs/: multilingual_model_support.md  resources.md
src/sbert/iterations/: RTS_chunking.py  chunking_cgpt.py  section_chunker.py
