[project]
name = "opensearch-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-text-splitters>=1.1.1",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "opensearch-py>=3.1.0",
    "protobuf>=7.34.0",
    "pymupdf>=1.27.2",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
]
